# common

./: CMakeLists.txt  README.md  common-config.cmake  make  make.bat
Include/common/: common.h  common_templates.h
src/: CMakeLists.txt  common.cpp
